<?xml version="1.0"?>

<package format="2">

  <name>icp_localization</name>
  <version>0.5.0</version>
  <description>ICP localization in a given map.</description>

  <license>BSD</license>

  <author email="jelavice@ethz.ch">Edo Jelavic</author>
  <maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>libgoogle-glog-dev</depend>
  <depend>ros-noetic-eigen-conversions</depend>
  <depend>ros-noetic-tf-conversions</depend>
  <depend>ros-noetic-tf2-geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pointmatcher_ros</depend>
  <depend>roslib</depend>
  <depend>libpointmatcher</depend>

</package>
